--- a/style.css
+++ b/style.css
@@ -1,3 +1,87 @@
+@font-face {
+  font-family: 'Netflix Sans';
+  src: url('NetflixSans-Medium.eot');
+  src: url('NetflixSans-Medium.eot?#iefix') format('embedded-opentype'),
+      url('NetflixSans-Medium.woff2') format('woff2'),
+      url('NetflixSans-Medium.woff') format('woff'),
+      url('NetflixSans-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Netflix Sans Icon';
+  src: url('NetflixSans-Icon.eot');
+  src: url('NetflixSans-Icon.eot?#iefix') format('embedded-opentype'),
+      url('NetflixSans-Icon.woff2') format('woff2'),
+      url('NetflixSans-Icon.woff') format('woff'),
+      url('NetflixSans-Icon.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  src: url('NetflixSans-Light.eot');
+  src: url('NetflixSans-Light.eot?#iefix') format('embedded-opentype'),
+      url('NetflixSans-Light.woff2') format('woff2'),
+      url('NetflixSans-Light.woff') format('woff'),
+      url('NetflixSans-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  src: url('NetflixSans-Black.eot');
+  src: url('NetflixSans-Black.eot?#iefix') format('embedded-opentype'),
+      url('NetflixSans-Black.woff2') format('woff2'),
+      url('NetflixSans-Black.woff') format('woff'),
+      url('NetflixSans-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  src: url('NetflixSans-Bold.eot');
+  src: url('NetflixSans-Bold.eot?#iefix') format('embedded-opentype'),
+      url('NetflixSans-Bold.woff2') format('woff2'),
+      url('NetflixSans-Bold.woff') format('woff'),
+      url('NetflixSans-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  src: url('NetflixSans-Thin.eot');
+  src: url('NetflixSans-Thin.eot?#iefix') format('embedded-opentype'),
+      url('NetflixSans-Thin.woff2') format('woff2'),
+      url('NetflixSans-Thin.woff') format('woff'),
+      url('NetflixSans-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Netflix Sans';
+  src: url('NetflixSans-Regular.eot');
+  src: url('NetflixSans-Regular.eot?#iefix') format('embedded-opentype'),
+      url('NetflixSans-Regular.woff2') format('woff2'),
+      url('NetflixSans-Regular.woff') format('woff'),
+      url('NetflixSans-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* CSS Resets */
 *,
 *::before,
@@ -65,8 +149,4 @@ html {
 
 body {
     background: var(--black);
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> d471007237e6e50d512f72b9a8a105d9f5cf76b2
