--- a/style.css
+++ b/style.css
@@ -160,6 +160,10 @@ h1 {
   font-size: 64px;
 }
 
+.logo{
+  padding: 20px 60px;
+}
+
 .index-container{
   width: 70%;
   margin: 10% auto;
@@ -192,6 +196,47 @@ h1 {
   border: 1px solid var(--gray);
   color: var(--gray); 
 }
+
+@media screen and (max-width:768px) {
+  .logo{
+    text-align: center;
+  }
+  h1{
+    display: none;
+  }
+  .profile-container{
+    flex-wrap: wrap;
+  }
+  .profile{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .profile h4 {
+    padding: 20px;
+  }
+}
+
+@media  screen and (max-width:576px) {
+
+  .logo{
+    text-align: center;
+  }
+  h1{
+    display: none;
+  }
+  .profile-container{
+    flex-wrap: wrap;
+  }
+  .profile{
+    flex-basis: 25%;
+  }
+}
+
+/* End index page  */
+
+
 ul{list-style-type: none;}
 
 /* Utilities */
