Remove non standard call

--- a/style.css
+++ b/style.css
@@ -91,11 +91,9 @@
 }
 
 html {
-    font-family: 'Roboto', sans-serif;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
-    -ms-overflow-style: scrollbar;
     -webkit-tap-highlight-color: transparent;
   }
   
@@ -157,6 +155,7 @@ h1 {
   color: #fff;
   font-size: 64px;
   font-family: 'Netflix Sans';
+  font-weight: 400;
 }
 
 .logo {
