Update CSS, comment and reorder color palette, Adjust netflix font

--- a/style.css
+++ b/style.css
@@ -112,22 +112,25 @@ html {
 
 /* Variables */
 :root {
+    /* Netflix Default Palette */
+    --white: #fff;
+    --clearwhite: rgba(255, 255, 255, 0.3);
+    --smokeWhite: #E5E5E5;
+    --midgray: rgb(109, 109, 110, 0.3);
+    --gray: #808080;
+    --black: #141414;
+    --red: #B9090B;
+    /* Bonus Colors */
     --blue: #007bff;
     --indigo: #6610f2;
     --purple: #6f42c1;
     --pink: #e83e8c;
-    --red: #B9090B;
     --orange: #fd7e14;
     --yellow: #ffc107;
     --green: #28a745;
     --teal: #20c997;
     --cyan: #17a2b8;
-    --white: #fff;
-    --opacity-white: rgba(255, 255, 255, 0.3);
-    --smokewhite: #E5E5E5;
-    --midgray: rgb(109, 109, 110, 0.3);
-    --gray: #808080;
-    --gray-dark: #343a40;
+    /* Event Colors */
     --primary: #007bff;
     --secondary: #6c757d;
     --success: #28a745;
@@ -136,7 +139,7 @@ html {
     --danger: #dc3545;
     --light: #f8f9fa;
     --dark: #343a40;
-    --black: #141414;
+    /* Device Breakpoints */
     --breakpoint-xs: 0;
     --breakpoint-sm: 576px;
     --breakpoint-md: 768px;
@@ -146,16 +149,24 @@ html {
 
 /* GENERAL */
 
+html,
 body {
-    background: var(--black)
+    background: var(--black);
+    font-family: 'Netflix Sans';
 }
 
 h1 {
   text-align: center;
   color: #fff;
   font-size: 64px;
-  font-family: 'Netflix Sans';
   font-weight: 400;
+  line-height: 81.73px;
+}
+
+h4 {
+  font-size: 26px;
+  font-weight: 400;
+  line-height: 33.2px;
 }
 
 .logo {
