--- a/style.css
+++ b/style.css
@@ -268,14 +268,10 @@ ul{list-style-type: none;}
 
 /* navbar */
 
-
 .navdesktop {
   display: flex;
   align-items: center;
-  padding-right: 16px;
-  background: #18181899; 
-  position: fixed; 
-  z-index: 2;
+  background: transparent;
 }
 
 .navdesktop div:last-child img{
@@ -306,17 +302,15 @@ ul li a,.dropdown a{
 }
 
 .ul-1,.ul-2{
-  gap: 15px;
+  gap: 20px;
+}
+
+.ul-1 {
+  overflow: hidden;
+}
+
+.ul-2 {
   position: relative;
-}
-
-.ul-1{
-  right: 40px;
-    overflow: hidden;
-}
-
-.ul-2{
-  right: 15px;
 }
 
 
@@ -563,7 +557,6 @@ ul li a,.dropdown a{
   height: 250px;
 }
 
-
 .top-ten {
   width: 26px;
   height: 38px;
@@ -575,43 +568,3 @@ ul li a,.dropdown a{
 }
 
 /* End of Movie Cards Sections */
-
-.numberstop{
-  font-family: 'Roboto', sans-serif; 
-  font-weight: 900;
-  text-shadow: 
-  -3px -3px 0 gray,  
-   3px -3px 0 gray,
-  -3px 3px 0 gray,
-   3px 3px 0 gray;
-  font-size: 250px;
-  position: relative;
-  line-height: 250px;
-  left: 6%;
-  top: 4%;
-}
-
-.top10flex:first-child .numberstop
-{
-  left: 14%;
-}
-
-.top10container{
-  overflow-y: hidden;
-  overflow-x: scroll;
-}
-
-.top10container::-webkit-scrollbar {
-  display: none;
-}
-
-.top10flex:last-child .numberstop
-{
-  letter-spacing: -2rem;
-  left: 0;
-}
-
-/* top 10 section end */
-
-
-
