--- a/style.css
+++ b/style.css
@@ -155,11 +155,25 @@ h4 {
   display: flex;
   padding: 30px 0 30px 0 ;
   justify-content: space-around;
+  gap:20px;
 }
 
 .profile a img {
   max-height: 200px;
   max-width: 200px;
+  border-radius: 4px;
+}
+
+.profile a img:hover{
+  border: 4px solid var(--smokeWhite);
+}
+.profile:hover > h4{
+  color: var(--white);
+  font-weight: 400;
+}
+
+.profile:last-child img:hover{
+  background:  var(--smokeWhite);
 }
 
 .profile h4 {
@@ -181,6 +195,11 @@ h4 {
   background: transparent;
   border: 1px solid var(--gray);
   color: var(--gray); 
+}
+
+.btn-gestisci-profili:hover{
+  border-color: var(--smokeWhite);
+  color:  var(--smokeWhite);
 }
 
 @media screen and (max-width:1280px){
@@ -374,7 +393,7 @@ ul li a,.dropdown a{
 }
 
 .movieinfo-pos {
-  /* width: 636px; */ /* Create Bug */
+  max-width: 636px; 
   height: 392px;
   position: absolute;
   top:200px;
@@ -390,7 +409,7 @@ ul li a,.dropdown a{
 }
 
 .movieinfo .item1 {
-  /* width: 408px; */
+  max-width: 408px;
   height: 115px;
   background-image: url(./assets/img/posters/MovieName.png);
   background-position: bottom center;
@@ -409,13 +428,13 @@ ul li a,.dropdown a{
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  /* width: 408px; */
+  max-width: 408px;
   height: 38px;
   gap: 15px;
 }
 
 .movieinfo.item3{
-  /* width: 636px; */
+  max-width: 636px;
   height: 132px;
 }
 .movieinfo .item3 p {
@@ -428,7 +447,7 @@ ul li a,.dropdown a{
   display: flex;
   justify-content: center;
   gap: 20px;
-  /* width: 433px; */
+  max-width: 433px;
   height: 62px;
 }
 
@@ -636,7 +655,6 @@ footer {
 .link {
   padding: 50px;
 }
-
 
 .logos {
   grid-gap: 20px;
